# cgol

./: .gitmodules  CMakeLists.txt  README.md
assets/: shader.frag  shader.vert
src/: main.c  shader.c  shader.h
